[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "qiskit-quimb"
description = "Simulate Qiskit circuits using quimb"
version = "0.0.11.dev"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["qiskit", "quimb >= 1.11"]

[project.urls]
Homepage = "https://github.com/qiskit-community/qiskit-quimb"

[dependency-groups]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff",
]
docs = [
    "kahypar",
    "myst-parser",
    "nbmake",
    "nbsphinx",
    "qiskit[visualization]",
    "qiskit-sphinx-theme",
    "sphinx",
    "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
files = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
    "docs/**/*.py",
    "docs/**/*.pyi",
    "docs/**/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "NPY"]

[tool.tox]
requires = ["tox>=4.50"]
env_list = [
    "test-3.10",
    "test-3.11",
    "test-3.12",
    "test-3.13",
    "test-3.14",
    "coverage",
    "type",
    "lint",
    "format",
    "docs",
]

[tool.tox.env_base.test]
description = "run tests"
factors = [["3.10", "3.11", "3.12", "3.13", "3.14"]]
deps = ["pytest"]
commands = [["pytest"]]

[tool.tox.env.coverage]
description = "check test coverage"
deps = ["coverage", "pytest"]
commands = [
    [
        "coverage",
        "run",
        "--source",
        "qiskit_quimb",
        "-m",
        "pytest",
    ],
    [
        "coverage",
        "report",
        "--fail-under=80",
    ],
]

[tool.tox.env.type]
description = "run type check"
deps = ["mypy"]
commands = [["mypy"]]

[tool.tox.env.lint]
description = "check for lint"
skip_install = true
deps = ["ruff"]
commands = [["ruff", "check"]]

[tool.tox.env.format]
description = "check formatting"
skip_install = true
deps = ["ruff"]
commands = [["ruff", "format", "--check"]]

[tool.tox.env.docs]
description = "build docs"
dependency_groups = ["docs"]
set_env.SPHINX_APIDOC_OPTIONS = "members,show-inheritance"
commands = [
    [
        "python",
        "-c",
        "import shutil, pathlib; shutil.rmtree(pathlib.Path('docs') / 'stubs', ignore_errors=True)",
    ],
    [
        "python",
        "-c",
        "import shutil, pathlib; shutil.rmtree(pathlib.Path('docs') / '_build', ignore_errors=True)",
    ],
    [
        "sphinx-build",
        "-b",
        "html",
        "-W",
        "docs/",
        "docs/_build/html",
    ],
]
